--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -29,18 +29,22 @@
         @media (max-width: 500px) {
             width: 100%;
             height: auto;
-            max-height: 450px;
+            max-height: 380px;
         }
     }
 }
 
 .inner {
     padding: 20px;
+
+    @media (max-width: 500px) {
+        padding: 20px 12px;
+    }
 }
 
 .title {
     font-weight: 500;
-    font-size: 20px;
+    font-size: 24px;
     margin-bottom: 10px;
 }
 
