--- a/src/components/MyEtries/MyEtries.module.scss
+++ b/src/components/MyEtries/MyEtries.module.scss
@@ -42,24 +42,32 @@
         @media (max-width: 500px) {
             width: 100%;
             height: auto;
-            max-height: 450px;
+            max-height: 380px;
         }
     }
 }
 
 .inner {
-    // min-width: 335px;
     padding: 20px;
+
+    @media (max-width: 500px) {
+        padding: 20px 12px;
+    }
 }
 
 .text {
     font-size: 20px;
     font-weight: 500;
     margin-bottom: 10px;
+
+    @media (max-width: 500px) {
+        font-size: 16px;
+        margin-bottom: 5px;
+    }
 }
 
 .clock {
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 500;
     color: #0087CD;
     margin-bottom: 20px;
@@ -69,9 +77,14 @@
     font-weight: 500;
     font-size: 20px;
     margin-bottom: 10px;
+
+    @media (max-width: 500px) {
+        font-size: 24px;
+    }
 }
 
 .block {
+    color: #0087CD;
     font-weight: 500;
     font-size: 16px;
     margin-bottom: 10px;
@@ -117,7 +130,12 @@
     color: #FFFFFF;
     border-radius: 14px;
     padding: 10px 20px;
+    margin-top: 30px;
     transition: opacity 0.2s ease-in-out;
+
+    @media (max-width: 500px) {
+        margin-top: 10px;
+    }
 
     .btnitem {
         display: flex;
