--- a/src/components/PersonalInformation/PersonalInformation.module.scss
+++ b/src/components/PersonalInformation/PersonalInformation.module.scss
@@ -3,6 +3,10 @@
     width: 100%;
     padding: 0 15px;
     margin: 0 auto;
+
+    @media (max-width: 768px) {
+        padding: 0 10px;
+    }
 }
 
 .info {
