--- a/src/index.scss
+++ b/src/index.scss
@@ -82,6 +82,10 @@ body {
     width: 100%;
     padding: 0 15px;
     margin: 0 auto;
+
+    @media (max-width: 768px) {
+        padding: 0 10px;
+    }
 }
 
 a.active {
