--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -3,11 +3,14 @@
     font-weight: 700;
     line-height: 50px;
     margin-bottom: 30px;
-
 }
 
 .block {
     margin-bottom: 20px;
+
+    @media (max-width: 768px) {
+        margin-bottom: 15px;
+    }
 }
 
 input {
@@ -36,6 +39,10 @@ input {
     color: #fff;
     border-radius: 14px;
     padding: 10px 20px;
+
+    @media (max-width: 768px) {
+        width: 50%;
+    }
 }
 
 .white {
@@ -44,4 +51,8 @@ input {
     border: 1px solid #C2C2C2;
     border-radius: 14px;
     padding: 10px 20px;
+
+    @media (max-width: 768px) {
+        width: 50%;
+    }
 }
