--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -4,9 +4,9 @@
     padding: 0 15px;
     margin: 0 auto;
 
-    @media (max-width: 768px) {
-        padding: 0 10px;
-    }
+    // @media (max-width: 768px) {
+    //     padding: 0 10px;
+    // }
 }
 
 .modal {
@@ -29,4 +29,11 @@
     text-align: center;
     border-radius: 30px;
     padding: 40px;
+
+    @media (max-width: 768px) {
+        max-width: 95%;
+        min-width: 320px;
+        border-radius: 20px;
+        padding: 20px;
+    }
 }
