--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -20,9 +20,11 @@
 }
 
 .col {
+    flex: 0 1 50%;
+
     img{
-        width: 240px;
-        height: 257px;
+        width: 260px;
+        height: 280px;
         object-fit: cover;
         border-radius: 35px;
 
@@ -32,6 +34,10 @@
             max-height: 380px;
         }
     }
+}
+
+.col:first-child {
+    text-align: center;
 }
 
 .inner {
@@ -57,6 +63,10 @@
     span {
         margin-right: 10px;
     }
+}
+
+.text {
+    margin-bottom: 5px;
 }
 
 .btns {
