--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -104,6 +104,7 @@
     background-color: #FF0066;
     color: #FFFFFF;
     border-radius: 14px;
+    margin-top: 10px;
     padding: 10px 20px;
 
     .btnitem {
