--- a/src/components/MyEtries/MyEtries.module.scss
+++ b/src/components/MyEtries/MyEtries.module.scss
@@ -33,6 +33,8 @@
 }
 
 .col {
+    flex: 0 1 50%;
+    
     img{
         width: 240px;
         height: 257px;
@@ -45,6 +47,10 @@
             max-height: 380px;
         }
     }
+}
+
+.col:first-child {
+    text-align: center;
 }
 
 .inner {
